# vpngate_io

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/vpngate_io/: dat_file.hpp  easycrypt.hpp  pack_reader.hpp  simple.hpp  value_types.hpp
include/vpngate_io/capi/: error.h  pack_reader.h  simple.h  value.h
src/: capi_test.c  dat2json.cpp  datid.cpp  file.hpp  test.cpp
src/lib/: bytemuck.hpp  dat_file.cpp  easycrypt.cpp  pack_reader.cpp  simple.cpp  value.cpp
src/lib/capi/: README.md  error.cpp  pack_reader.cpp  simple.cpp  value.cpp
src/test/: capi_test.c
src/utils/: datid.cpp
